pages/services/edge-lb/0.1/pool-configuration/index.md
---
layout: layout.pug
navigationTitle:  Edge-LB Pool Config Reference
title: Edge-LB Pool Config Reference
menuWeight: 80
excerpt:

enterprise: false
---

This is a reference for all possible Edge-LB pool configuration values as well as some examples to demonstrate various use-cases.

# Configuration Reference

The YAML configuration reference containing all possible options and descriptions of each can be found by running the following command:

```
dcos edgelb config --reference
```

# Edge-LB v0.1

The tables below describe all possible configuration options. The majority of fields have sensible defaults and should be modified with caution.

## Configuration Guidelines

- If a default is not set, it will be left empty, even for objects.
- Set defaults in the object that is furthest from the root object.
- Always set a default for arrays.
- The purpose of "nullable" is to allow the output JSON field to be set to the golang "zero value". Without "nullable", the field will be removed altogether from the resulting JSON.
- Actual validation is done in the code, not expressed in swagger.
- Since an empty boolean is interpreted as "false", don't set a default.
- CamelCase.
- Swagger will only do enum validation if it is a top level definition.

# config

The root JSON object.

| Key   | Type                                        | Description |
| ----- | ------------------------------------------- | ----------- |
| pools | array of [pool](#config.pools.pool) objects | Zero or more pool definitions, where each pool describes a set of load balancers. |

<a name="config.pools.pool"></a>
# config.pools.pool
The pool contains information on resources that the pool needs. Changes made to this section will relaunch the tasks.

| Key                         | Type     |  Nullable   |  Properties     | Description    |
| --------------------------- | -------- | ----------- | --------------  | -------------- |
| name                        | string   |             |                 | The pool name. |
| namespace                   | string   |  true       |                 | The DC/OS space (sometimes also referred to as a "group"). |
| packageName                 | string   |             |                 |                |
| packageVersion              | string   |             |                 |                |
| role                        | string   |             |                 | Mesos role for load balancers. Defaults to "slave_public" so that load balancers will be run on public agents. Use "*" to run load balancers on private agents. Read more about Mesos roles at http://mesos.apache.org/documentation/latest/roles/.  |
| cpus                        | number   |             |                 |                |
| cpusAdminOverhead           | number   |             |                 |                |
| mem                         | int32    |             |                 | Memory requirements (in MB). |
| memAdminOverhead            | int32    |             |                 | Memory requirements (in MB). |
| disk                        | int32    |             |                 | Disk size (in MB). |
| count                       | integer  | true        |                 | Number of load balancer instances in the pool. |
| constraints                 | string   | true        |                 | Marathon style constraints for load balancer instance placement. |
| ports                       | array    |             |                 | <ul><li>Override ports to allocate for each load balancer instance.</li><li>Defaults to {{haproxy.frontend.objs[].bindPort}} and {{haproxy.stats.bindPort}}.</li><li>Use this field to pre-allocate all needed ports with or without the frontends present. For example: [80, 443, 9090].</li><li>If the length of the ports array is not zero, only the ports specified will be allocated by the pool scheduler.</li></ul> |
| items                       | int32    |             |                 |                |
| secrets                     | array    |             | <ul><li>[secret](#secrets-prop)</li><li>[file](#secrets-prop)</li></ul> | DC/OS secrets. |
| environmentVariables        | object   |             | [additionalProperties](#env-var) | Environment variables to pass to tasks. Prefix with `ELB_FILE_` and it will be written to a file. For example, the contents of `ELB_FILE_MYENV` will be written to `$ENVFILE/ELB_FILE_MYENV`. |
| autoCertificate             | boolean  |             |                 | Autogenerate a self-signed SSL/TLS certificate. It is not generated by default. It will be written to `$AUTOCERT`. |
| virtualNetworks             | array    |             | <ul><li>[name](#vn-prop)</li><li>[labels](#vn-prop)</li></ul> | Virtual networks to join. |
| haproxy                     |          |             |                 |                 |

<a name="secrets-prop"></a>
## config.pools.pool.secrets

| Key           | Type        | Description |
| ------------- | ----------- | ----------- |
| secret        | object      |             |

### congif.pools.pool.secrets.secret

| Key           | Type        | Description |
| ------------- | ----------- | ----------- |
| secret        | string      | Secret name. |
| file          | string      | File name.<br />The file `myfile` will be found at `$SECRETS/myfile`. |

<a name="env-var"></a>
## config.pools.pool.environmentVariables

| Key                   | type        | Description |
| --------------------- | ----------- | ----------- |
| additionalProperties  | string      |             |

<a name="vn-prop"></a>
## config.pools.pool.virtualNetworks

| Key           | Type        | Description |
| ------------- | ----------- | ----------- |
| name          | string      | The name of the virtual network to join. |
| labels        | string      | Labels to pass to the virtual network plugin. |

<a name="haproxy-prop"></a>
# config.pools.haproxy

| Key             | Type    | Description         |
| --------------- | ------- | ------------------- |
| stats           |         |                     |
| frontends       | array   | Array of frontends. |
| backends        | array   | Array of backends.  |

<a name="stats-prop"></a>
# config.pools.stats

| Key            | Type     |
| -------------- | -------- |
| bindAddress    | string   |
| bindPort       | int 32   |

<a name="frontend-prop"></a>
# config.pools.frontend

| Key             | Type    | Properties     | Description    | x-nullable | Format |
| --------------- | ------- | -------------- | -------------- | ---------- | ------ |
| name            | string  |                | Defaults to `frontend_{{bindAddress}}_{{bindPort}}`.  |   |   | bindAddress     | string  |                | Only use characters that are allowed in the frontend name. Known invalid frontend name characters include `*`, `[`, and `]`.  |   |   |
| bindPort        | integer |                | The port (e.g. 80 for HTTP or 443 for HTTPS) that this frontend will bind to.  |   | int32  |
| bindModifier    | string  |                | Additional text to put in the bind field   |   |   |
| certificates    | array   |                | SSL/TLS certificates in the load balancer.<br /><br />For secrets, use `$SECRETS/my_file_name`<br />For environment files, use `$ENVFILE/my_file_name`<br />For autoCertificate, use `$AUTOCERT`.<br />type: string  |   |   |
| redirectToHttps | object  | <ul><li>[except](#redirect-https-prop)</li><li>[items](#redirect-https-prop)</li></ul>  | Setting this to the empty object is enough to redirect all traffic from HTTP (this frontend) to HTTPS (port 443). Default: except: [] |   |   |
| miscStrs        | array of strings  |   | Additional template lines inserted before use_backend  |   |   |
| protocol        |   |   | The frontend protocol is how clients/users communicate with HAProxy.  |   |   |
| linkBackend     | object  | <ul><li>defaultBackend</li><li>map</li></ul>  | This describes what backends to send traffic to. This can be expressed with a variety of filters such as matching on the hostname or the HTTP URL path.<br />Default: map: []   |   |   |

<a name="redirect-https-prop"></a>
## config.pools.frontend.redirectToHttps

| Key             | Type    | Properties  | Description     |
| --------------- | ------- | ----------- | --------------- |
| except          | array   |             | You can additionally set a whitelist of fields that must be matched to allow HTTP.  |
| items           | object  | <ul><li>[host](#items-prop)</li><li>[pathBeg](#items-prop)</li></ul> | Boolean AND will be applied with every selected value. |

<a name="items-prop"></a>
### config.pools.frontend.redirectToHttps.items

| Key             | Type    | Description |
| --------------- | ------- | ----------- |
| host            | string  | Match on host. |
| pathBeg         | string  | Math on path.  |

## config.pools.frontend.linkBackend

| Key             | Type    | Properties | Description |
| --------------- | ------- | ---------- | ----------- |
| defaultBackend  | string  |            | This is default backend that is routed to if none of the other filters are matched.  |
| map             | array   | <ul><li>[backend](#map-prop)</li><li>[hostEq](#map-prop)</li><li>[hostReg](#map-prop)</li><li>[pathBeg](#map-prop)</li><li>[pathEnd](#map-prop)</li><li>[pathReg](#map-prop)</li></ul> | This is an optional field that specifies a mapping to various backends. These rules are applied in order.<br />"Backend" and at least one of the condition fields must be filled out. If multiple conditions are filled out, they will be combined with a boolean "AND". |

<a name="map-prop"></a>
### config.pools.frontend.linkBackend.map

| Key             | Type    | Description |
| --------------- | ------- | ----------- |
| backend         | string  |             |
| hostEq          | string  | Must be all lowercase. |
| hostReg         | string  | Must be all lowercase. It is possible for a port (e.g. `foo.com:80`) to be in this regex.  |
| pathBeg         | string  |             |
| pathEnd         | string  |             |
| pathReg         | string  |             |

<a name="backend-prop"></a>
# config.pools.backend

| Key             | Type    | Properties     | Description    |
| --------------- | ------- | -------------- | -------------- |
| name            | string  |                | The name the frontend refers to. |
| protocol        | string  |                | The backend protocol is how HAProxy communicates with the servers it is load balancing. |
| rewriteHttp     |         |                | Manipulate HTTP headers. There is no effect unless the protocol is either HTTP or HTTPS. |
| balance         | string  |                | Load balancing strategy. E.g., roundrobin, leastconn, etc. |
| customCheck     | object  | <ul><li>[httpchk](#customCheck-prop)</li><li>[httpchkMiscStr](#customCheck-prop)</li><li>[sslHelloChk](#customCheck-prop)</li><li>[miscStr](#customCheck-prop)</li></ul>  | Specify alternate forms of healthchecks.  |
| miscStrs        | array of strings |       | Additional template lines inserted before servers  |
| servers         | array   |                | Array of backend network sources / selectors.  |

<a name="customCheck-prop"></a>
## config.pools.backend.customCheck

| Key            | Type     |
| -------------  | -------- |
| httpchk        | boolean  |
| httpchkMiscStr | string   |
| sslHelloChk    | boolean  |
| miscStr        | string   |

<a name="#rewrite-prop"></a>
# config.pools.RewriteHttp

| Key             | Type    | Properties     | Description    |
| --------------- | ------- | -------------- | -------------- |
| host            | string  |                | Set the host header value. |
| path            | object  | <ul><li>[fromPath](#path-prop)</li><li>[toPath](#path-prop)</li></ul>  | Rewrite the HTTP URL path. All fields required, otherwise it's ignored.  |
| request         |         |                |                |
| response        |         |                |                |
| sticky          | object  | <ul><li>[enabled](#sticky-prop)</li><li>[customStr](#sticky-prop)</li></ul>  | Sticky sessions via a cookie.<br />To use the default values (recommended), set this field to the empty object.  |

<a name="path-prop"></a>
## config.pools.rewriteHttp.path

| Key             | Type    |
| --------------- | ------- |
| fromPath        | string  |
| toPath          | string  |

<a name="sticky-prop"></a>
## config.pools.rewriteHttp.sticky

| Key             | Type    | nullable   |
| --------------- | ------- | ---------- |
| enabled         | boolean | true       |
| customStr       | string  |            |

<a name="rewrite-req-prop"></a>
# config.pools.rewriteHttpRequest

| Key                         | Type       | nullable   |
| --------------------------- | ---------- | ---------- |
| forwardfor                  | boolean    | true       |
| xForwardedPort              | boolean    | true       |
| xForwardedProtoHttpsIfTls   | boolean    | true       |
| setHostHeader               | boolean    | true       |
| rewritePath                 | boolean    | true       |

<a name="rewrite-resp-prop"></a>
# config.pools.rewriteHttpResponse

| Key             | Type       | nullable   |
| --------------- | ---------- | ---------- |
| rewriteLocation | boolean    | true       |

<a name="server-prop)"></a>
# config.pools.server

| Key             | Type       | Properties |  Default    | Description |
| --------------- | ---------- | ---------- | ----------- | ----------- |
| type            |            |            |             |             |
| framework       | object     | <ul><li>[value](#framework-prop)</li><li>[match](#framework-prop)</li></ul> | match: EXACT | The Mesos framework. If unsure, the value should probably be "marathon". |
| task            | object     | <ul><li>[value](#task-prop)</li><li>[match](#task-prop)</li></ul>  | match: EXACT  | The Task name. This field is not needed for VIPs.<br />For Marathon pods, this is the container name, NOT the pod name. |
| check           | object     | <ul><li>[enabled](#check-prop)</li><li>[customStr](#check-prop)</li></ul> | enabled: true | Enable health checks. These are by default TCP health checks. For more options see "customCheck".<br />These are required for DNS resolution (and hence VIPs) to function properly |
| port            |            |            |             |             |
| miscStr         | string     |            |             | Append an arbitrary string to the "server" directive. |

<a name="framework-prop"></a>
## config.pools.server.framework

| Key         | Type      |
| ----------- | --------- |
| values      | string    |
| match       |           |

<a name="task-prop"></a>
## config.pools.server.task

| Key         | Type      | Description |
| ----------- | --------- | ----------- |
| value       | string    | The Task name. This field is not needed for VIPs.<br />For Marathon pods, this is the container name, NOT the pod name. |
| match       |           |             |

<a name="check-prop"></a>
## config.pools.Server.check

| Key             | Type       | nullable   |
| --------------- | ---------- | ---------- |
| enabled         | boolean    | true       |
| customStr       | string     |            |

<a name="server-port-prop"></a>
# config.pools.serverPort

| Key             | Type       | description |
| --------------- | ---------- | ----------- |
| name            | string     | The name of the port. This is used for AUTO_IP, AGENT_IP and CONTAINER_IP. |
| all             | boolean    | For AUTO_IP, AGENT_IP and CONTAINER_IP,this can be used to expose all defined ports.<br />This should only be used if a name is not defined for the port and there is a single port defined for the service.  |
| vip             | strings    | Set the VIP definition directly (e.g. "/myvip:1234"). |

<a name="error-prop"></a>
# config.pools.error

| Key             | Type        |
| --------------- | ----------- |
| code            | int32       |
| message         | string      |

# Examples

## Marathon Apps and DC/OS Services

DC/OS services are typically run as applications on the Marathon framework. To create a pool configuration file for a Marathon application, you will need to know the Mesos `task` name and `port` name.

For example, in the following snippet of a Marathon app definition, the `task` name is `my-app` and the `port` name is `web`.

```json
{
  "id": "/my-app",
  ...
  "portDefinitions": [
    {
      "name": "web",
      "protocol": "tcp",
      "port": 0
    }
  ]
}
```

If you are not sure about the Mesos task name for your application, check the Mesos web ui at `https://<cluster-url>/mesos`

Below is a simple example of a pool configuration for load-balancing a Marathon application like the one above:

```json
{
  "pools": [{
    "name": "app-lb",
    "count": 1,
    "haproxy": {
      "frontends": [{
        "bindPort": 80,
        "protocol": "HTTP",
        "linkBackend": {
          "defaultBackend": "app-backend"
        }
      }],
      "backends": [{
        "name": "app-backend",
        "protocol": "HTTP",
        "servers": [{
          "framework": {
            "value": "marathon"
          },
          "task": {
            "value": "my-app"
          },
          "port": {
            "name": "web"
          }
        }]
      }]
    }
  }]
}
```

## SSL/TLS certificates

There are 3 different ways to get and use a certificate:

### Automatically generated self-signed certificate

```json
{
  "pools": [
    {
      "name": "auto-certificates",
      "count": 1,
      "autoCertificate": true,
      "haproxy": {
        "frontends": [
          {
            "bindPort": 443,
            "protocol": "HTTPS",
            "certificates": [
              "$AUTOCERT"
            ],
            "linkBackend": {
              "defaultBackend": "host-httpd"
            }
          }
        ],
        "backends": [
          {
            "name": "host-httpd",
            "protocol": "HTTP",
            "servers": [
              {
                "framework": {
                  "value": "marathon"
                },
                "task": {
                  "value": "host-httpd"
                },
                "port": {
                  "name": "web"
                }
              }
            ]
          }
        ]
      }
    }
  ]
}
```

### DC/OS Secrets

```json
{
  "pools": [
    {
      "name": "secret-certificates",
      "count": 1,
      "autoCertificate": false,
      "secrets": [
        {
          "secret": "mysecret",
          "file": "mysecretfile"
        }
      ],
      "haproxy": {
        "frontends": [
          {
            "bindPort": 443,
            "protocol": "HTTPS",
            "certificates": [
              "$SECRETS/mysecretfile"
            ],
            "linkBackend": {
              "defaultBackend": "host-httpd"
            }
          }
        ],
        "backends": [
          {
            "name": "host-httpd",
            "protocol": "HTTP",
            "servers": [
              {
                "framework": {
                  "value": "marathon"
                },
                "task": {
                  "value": "host-httpd"
                },
                "port": {
                  "name": "web"
                }
              }
            ]
          }
        ]
      }
    }
  ]
}
```

### Environment variables (Insecure)

```json
{
  "pools": [
    {
      "name": "sample-certificates",
      "count": 1,
      "autoCertificate": false,
      "environmentVariables": {
        "ELB_FILE_HAPROXY_CERT": "-----BEGIN CERTIFICATE-----\nfoo\n-----END CERTIFICATE-----\n-----BEGIN RSA PRIVATE KEY-----\nbar\n-----END RSA PRIVATE KEY-----\n"
      },
      "haproxy": {
        "frontends": [
          {
            "bindPort": 443,
            "protocol": "HTTPS",
            "certificates": [
              "$ENVFILE/ELB_FILE_HAPROXY_CERT"
            ],
            "linkBackend": {
              "defaultBackend": "host-httpd"
            }
          }
        ],
        "backends": [
          {
            "name": "host-httpd",
            "protocol": "HTTP",
            "servers": [
              {
                "framework": {
                  "value": "marathon"
                },
                "task": {
                  "value": "host-httpd"
                },
                "port": {
                  "name": "web"
                }
              }
            ]
          }
        ]
      }
    }
  ]
}
```

## Virtual Networks

In this example we create a pool that will be launched on the virtual network provided by DC/OS overlay called "dcos". In general you can launch a pool on any CNI network, by setting `pool.virtualNetworks[].name` to the CNI network name.

```json
{
  "pools": [
    {
      "name": "vnet-lb",
      "count": 1,
      "virtualNetworks": [
        {
          "name": "dcos",
          "labels": {
            "key0": "value0",
            "key1": "value1"
          }
        }
      ],
      "haproxy": {
        "frontends": [
          {
            "bindPort": 80,
            "protocol": "HTTP",
            "linkBackend": {
              "defaultBackend": "vnet-be"
            }
          }
        ],
        "backends": [
          {
            "name": "vnet-be",
            "protocol": "HTTP",
            "servers": [
              {
                "framework": {
                  "value": "marathon"
                },
                "task": {
                  "value": "my-vnet-app"
                },
                "port": {
                  "name": "my-vnet-port"
                }
              }
            ]
          }
        ]
      }
    }
  ]
}
```
